Finish all api structure and start unit tests

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,8 +8,13 @@ WORKDIR /var/www/html/server
 
 COPY php-cli.ini /usr/local/etc/php/conf.d/
 
+RUN apk add --no-cache autoconf g++ make linux-headers
+
+RUN pecl install xdebug
+
 RUN apk update && apk add --no-cache \
     postgresql-dev \
+    && docker-php-ext-enable xdebug \
     && docker-php-ext-install pdo_pgsql
 
 CMD bash -c "composer install && php -S 0.0.0.0:${APP_PORT} public/index.php"
