--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,17 @@
 POSTGRES_DB=market
 POSTGRES_PASSWORD=123456
 
+DB_HOST=market_db
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=123456
+DB_NAME=market
+
+DB_TEST_HOST=market_db
+DB_TEST_PORT=5432
+DB_TEST_USERNAME=postgres
+DB_TEST_PASSWORD=123456
+DB_TEST_NAME=market_test
+
 APP_PORT=8888
+APP_MODE=production
